--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.3.0",
-    "openai": "^4.96.0",
     "autoprefixer": "^10.4.21",
     "next": "15.3.0",
+    "openai": "^4.96.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
